# Apeiron

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.vi_VN  build.sh  clean.sh  compile_flags.txt  iso.sh  makefile  readme.md  run.sh  tpm.sh
cert/: open.crt  root.crt  vnexos.cer  vnexos.crt  vnexos_db.cer  vnexos_db.crt  vnexos_kek.cer  vnexos_kek.crt  vnexos_pk.cer  vnexos_pk.crt
config/: color.mk  compile.mk  compiler.cmake  environment.cmake  general.mk  linker.mk  source_filter.cmake
config/arch/: aarch64.cmake  aarch64.mk  riscv64.cmake  riscv64.mk  x86_64.cmake  x86_64.mk
grub/: CMakeLists.txt  compile_flags.txt  linker_grub_riscv64.ld  makefile
grub/inc/: cpu.hpp  efi.hpp
grub/src/: efilib.cpp  efilib.hpp  main.cpp
shared/: CMakeLists.txt  acpi.hpp  common.hpp  cpu.hpp  efi.hpp  efi_boot.hpp  efi_memory.hpp  efi_system.hpp  efi_types.hpp  efilib.cpp  efilib.hpp  makefile  string.cpp  string.hpp  usx.h
shared/post_quantum/: LICENSE  LICENSE.vi_VN  sign.cpp  sign.hpp
shared/post_quantum/crypto/: aes256.cpp  aes256.hpp  randombytes.cpp  randombytes.hpp  sha3.cpp  sha3.hpp
shared/post_quantum/kem/: indcpa.cpp  indcpa.hpp  kyber.cpp  kyber.hpp  ntt.cpp  ntt.hpp  polynomial.cpp  polynomial.hpp  reduce.cpp  reduce.hpp
shared/post_quantum/sig/: dilithium.cpp  dilithium.hpp  ntt.cpp  ntt.hpp  packing.cpp  packing.hpp  polynomial.cpp  polynomial.hpp  reduce.cpp  reduce.hpp  rounding.cpp  rounding.hpp  symmetric.cpp  symmetric.hpp
shared/protocol/: efi_file.hpp  efi_graphics.hpp  efi_image.hpp  efi_mp.hpp  efi_tcg.hpp  efi_text.hpp
tools/: add_sbat.py  elf2efi_riscv64.py
